<resources>
    <string name="bootstrapper_status_applying_modifications">Applying changes to Roblox…</string>
    <string name="bootstrapper_status_cleaning_logs_on_roblox">Cleaning logs on Roblox…</string>
    <string name="bootstrapper_status_cleaning_caches_on_roblox">Cleaning caches on Roblox…</string>
    <string name="bootstrapper_status_connecting">Connecting to Roblox…</string>
    <string name="bootstrapper_status_starting_roblox">Starting Roblox</string>
    <string name="bootstrapper_status_upgrading_chevstrap">Getting the latest Chevstrap…</string>
    <string name="dialog_player_error_help_information">For information about why this could be happening and how this can be resolved, Learn more:\n</string>
    <string name="dialog_cheater_warning">Third-party modifications may interfere with Roblox functionality. If you are using a modified version of Roblox for exploitation or reverse engineering purposes, please uninstall it and install the official Roblox app available on the Google Play to continue.</string>
    <string name="dialog_chevstrap_ask_permission">Before importing, Chevstrap will ask for permission to access the file you want to import. Would you like to show the permission request?</string>
    <string name="dialog_failed_to_apply_changes">An issue occurred while applying changes to Roblox \n\nMore information:</string>
    <string name="dialog_failed_to_launch">An issue occurred while launching Roblox \n\nMore information:</string>
    <string name="dialog_ask_this_feature_uses_activity_tracking">This feature uses activity tracking to function properly.</string>
    <string name="dialog_failed_to_importfile">An issue occurred while importing the file \n\nMore information:</string>
    <string name="dialog_not_installed">Roblox may not be installed yet. Please install it.</string>
    <string name="dialog_delete_all_fflags_warning">Are you sure you want to delete all flags?</string>
    <string name="dialog_unsaved_changes">You have unsaved changes. Are you sure you want to close without saving?</string>
    <string name="dialog_access_to_roblox_directories_is_blocked">Access to Roblox directories is blocked due to Android restrictions. Please run Chevstrap inside a virtual app environment that supports shared directory access, and review its privacy policy before use \n\nLearn more here:</string>
    <string name="dialog_device_full_storage">Your device doesn’t have enough storage to run Chevstrap properly. Try clearing some space to continue.</string>
    <string name="dialog_add_fflag_title">Add FFlag</string>
    <string name="dialog_edit_fflag_title">Edit FFlag</string>
    <string name="notification_connected_to_a_server">Connected to a server</string>
    <string name="notification_server_location_failed">Server location could not be determined</string>
    <string name="notification_server_location_success">Server location:</string>
    <string name="backups_backup_name">Backup name</string>
    <string name="backups_load_selected_backup">Load selected backup</string>
    <string name="backups_save_backup">Save backup</string>
    <string name="backups_delete_selected_backup">Delete selected backup</string>
    <string name="about_title">About</string>
    <string name="about_licenses_title">Licenses</string>
    <string name="about_section_contributors_title">Contributors</string>
    <string name="about_code_and_uidesign_title">Code and UI Design</string>
    <string name="about_github_repository_title">Github Repository</string>
    <string name="about_discord_server_title">Discord server</string>
    <string name="about_help_and_information">Help and information</string>
    <string name="about_report_an_issue_or_feature_request_title">Report an issue or a feature request</string>
    <string name="about_proofreader_title">Proofreader</string>
    <string name="about_section_special_thanks_title">Special Thanks</string>
    <string name="about_translator_title">Translator</string>
    <string name="about_bloxstrap_contributors">Bloxstrap\'s Contributors</string>
    <string name="about_bloxstrap_contributors_desc_title">Chevstrap was inspired by Bloxstrap.</string>
    <string name="about_roblox_client_tracker_contributors">Roblox Client Tracker Contributors</string>
    <string name="about_roblox_client_tracker_contributors_desc_title">Chevstrap used a part of Roblox Client Tracker for Flag Validators.</string>
    <string name="about_feature_ideas_title">Feature Ideas</string>
    <string name="about_license_mit">MIT License</string>
    <string name="launchmenu_launchroblox">Launch Roblox</string>
    <string name="launchmenu_configuresettings">Configure Settings</string>
    <string name="launchmenu_wiki">See the Wiki for help</string>
    <string name="menu_title">Chevstrap Menu</string>
    <string name="menu_behaviour_title">Launcher</string>
    <string name="menu_behaviour_description">Configure what Chevstrap should do when launching Roblox.</string>
    <string name="menu_behaviour_clear_roblox_logs_title">Clear Roblox Logs</string>
    <string name="menu_behaviour_clear_roblox_logs_description">Deletes previous Roblox log files before launching Roblox. The Roblox engine itself will automatically create new log files afterward as part of normal operation.</string>
    <string name="menu_behaviour_clear_roblox_caches_title">Clear Roblox Cache</string>
    <string name="menu_behaviour_clear_roblox_caches_description">Deletes all previous Roblox cache files before launching Roblox. The Roblox engine itself will automatically create new cache files afterward as part of normal operation.</string>
    <string name="menu_behaviour_bring_latest_release_title">Manual Chevstrap upgrade</string>
    <string name="menu_behaviour_bring_latest_release_description">Directs you to the latest Chevstrap release page if your current version is outdated.</string>
    <string name="menu_settings_description">Configure options related to Chevstrap\'s behavior.</string>
    <string name="menu_settings_color_theme_in_app_title">Color Theme</string>
    <string name="menu_settings_color_theme_in_app_description">Select the color theme for Chevstrap. Restart and save to apply changes.</string>
    <string name="menu_settings_language_title">Language</string>
    <string name="menu_settings_language_description">Changes take effect after a restart.</string>
    <string name="menu_preferred_roblox_app_type_title">Preferred Roblox app type</string>
    <string name="menu_preferred_roblox_app_type_description">Select which Roblox app to use and apply the changes in Chevstrap.</string>
    <string name="menu_portrait_mode_title">Force Portrait Mode</string>
    <string name="menu_portrait_mode_description">Keeps the app in portrait orientation even if the device is rotated.</string>
    <string name="menu_integrations_title">Integrations</string>
    <string name="menu_integrations_description">Configure additional functionality to go alongside Roblox.</string>
    <string name="menu_integrations_section_activitytracking">Activity tracking</string>
    <string name="menu_integrations_queryserverlocation_title">Query server location</string>
    <string name="menu_integrations_queryserverlocation_description">Shows your server location in-game via the ipinfo.io.</string>
    <string name="menu_integrations_section_fpsunlocking">FPS Unlocking</string>
    <string name="menu_integrations_setframeratelimit_title">Framerate limit</string>
    <string name="menu_integrations_setframeratelimit_description">Set to 0 for Roblox\'s native framerate unlocker.</string>
    <string name="menu_integrations_enablefpsdisplay_title">Display FPS</string>
    <string name="menu_integrations_enablefpsdisplay_description">Displays a real-time frames-per-second overlay.</string>
    <string name="menu_fastflags_title">FFlags Settings</string>
    <string name="menu_fastflags_search">Search</string>
    <string name="menu_fastflags_help_title">Help</string>
    <string name="menu_fastflags_help_description">Learn about Fast Flags, what presets do, and how to use them.</string>
    <string name="menu_fastflags_allowmanagefflags_title">Allow Chevstrap to Manage Fast Flags</string>
    <string name="menu_fastflags_allowmanagefflags_description">Disabling this prevents the configured Fast Flags from being applied to Roblox.</string>
    <string name="menu_fastflags_resetconfiguration_title">Reset Configuration</string>
    <string name="menu_fastflags_section_presets">Presets</string>
    <string name="menu_fastflags_accordion_renderinggraphics">Rendering and Graphics</string>
    <string name="menu_fastflags_accordion_testingdebugs">Debugs and Logging</string>
    <string name="menu_fastflags_renderingmode_title">Rendering Mode</string>
    <string name="menu_fastflags_completelygraysky_title">Force completely gray sky</string>
    <string name="menu_fastflags_msaa_title">Anti-Aliasing Quality (MSAA)</string>
    <string name="menu_fastflags_texturequality_title">Texture Quality</string>
    <string name="menu_fastflags_frameratelimit_240_warning">Going above 240 framerate limit is not recommended, as this change may causes issues.</string>
    <string name="menu_fastflageditor_addnew">Add new</string>
    <string name="menu_fastflageditor_alreadyexists">An entry for this flag name already exists.</string>
    <string name="menu_fastflageditor_bannertext">Misusing this can lead to instability or unexpected things happening.</string>
    <string name="menu_fastflageditor_bannertitle">Use with caution.</string>
    <string name="menu_fastflageditor_conflictingimport">Some of the flags you are trying to import are already set. Do you want to replace the current values with those from the import? \n\nConflicting flags:\n</string>
    <string name="menu_fastflageditor_deleteselected">Delete selected</string>
    <string name="menu_fastflageditor_deleteall">Delete all</string>
    <string name="menu_fastflageditor_description">Manage your own Fast Flags. Hold click a column to edit.</string>
    <string name="menu_fastflageditor_copyall">Copy all</string>
    <string name="menu_fastflageditor_exportjson">Export JSON</string>
    <string name="menu_fastflageditor_invalidjson">Your input JSON format is invalid. Please check your JSON again and make corrections. \n\nMore information:</string>
    <string name="menu_fastflageditor_jsoncopiedtoclipboard">Copied to clipboard.</string>
    <string name="menu_fastflageditor_search">Search</string>
    <string name="menu_fastflageditor_showpresetflags">Show preset flags</string>
    <string name="menu_fastflageditor_backups">Backups</string>
    <string name="menu_fastflageditor_title">FFlags Editor</string>
    <string name="menu_fastflageditor_warning_text">FFlags, known as Fast Flags, are very powerful as they are specifically designed for Roblox engineers. They’re useful, but changing them yourself can mess things up badly. Only use the editor if you really know what you’re doing. Avoid importing large flag lists from others, whether made by people or generated by Artificial Intelligence (AI), that claim to improve performance or offer similar benefits, as they can lead to serious issues. If you\'re doing that, stop immediately. Abusing Fast Flags can also get you action taken on most Roblox games, so use them responsibly. \n\nDo you accept full responsibility for the consequences and still want to proceed?</string>
    <string name="common_default">Default</string>
    <string name="common_automatic">Automatic</string>
    <string name="common_none">None</string>
    <string name="common_yes">Yes</string>
    <string name="common_ok">OK</string>
    <string name="common_value">Value</string>
    <string name="common_name">Name</string>
    <string name="common_close">Close</string>
    <string name="common_save_and_launch">Save and Launch</string>
    <string name="common_save">Save</string>
</resources>