<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#101010"
		android:orientation="vertical">

		<ScrollView
			android:id="@+id/vscroll5"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingStart="5dp"
			android:paddingEnd="5dp">

			<LinearLayout
				android:id="@+id/linear10"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<LinearLayout
					android:id="@+id/linear_container_title"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:gravity="start"
					android:orientation="horizontal" >
					<TextView
						android:id="@+id/textview_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/dialog_edit_fflag_title"
						android:textSize="11sp"
						android:layout_marginEnd="10dp"
						android:textColor="#E0E0E0" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/linear11"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingStart="15dp"
					android:paddingEnd="15dp"
					android:paddingBottom="5dp"
					android:orientation="vertical">
					<LinearLayout
						android:id="@+id/linear_actual_middle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="0dp"
						android:gravity="center"
						android:orientation="horizontal" />
					<LinearLayout
						android:id="@+id/linear_center_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="7dp"
						android:gravity="center"
						android:orientation="horizontal" >
						<TextView
							android:id="@+id/textview_name"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:text="@string/common_name"
							android:textSize="11sp"
							android:layout_weight="1"
							android:textColor="#E0E0E0" />
						<LinearLayout
							android:id="@+id/linear_center_list1"
							android:layout_width="275dp"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:gravity="center"
							android:orientation="horizontal" />
					</LinearLayout>
					<LinearLayout
						android:id="@+id/linear_center_value"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="7dp"
						android:gravity="center"
						android:orientation="horizontal" >
						<TextView
							android:id="@+id/textview_value"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:text="@string/common_value"
							android:textSize="11sp"
							android:layout_weight="1"
							android:textColor="#E0E0E0" />
						<LinearLayout
							android:id="@+id/linear_center_list2"
							android:layout_width="275dp"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:gravity="center"
							android:orientation="horizontal" />
					</LinearLayout>
					<HorizontalScrollView
						android:id="@+id/linear_bottom_main"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="0dp"
						android:gravity="center"
						android:fillViewport="true"
						android:orientation="horizontal" >
						<LinearLayout
							android:id="@+id/linear_bottom_list"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:gravity="center"
							android:orientation="horizontal" />
					</HorizontalScrollView>
				</LinearLayout>
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</LinearLayout>

