<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/linear_background"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:id="@+id/linear3"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/linear1"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:orientation="horizontal"
				android:layout_weight="1">

				<LinearLayout
					android:id="@+id/linear4"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:orientation="vertical">

					<LinearLayout
						android:id="@+id/linear22"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingLeft="2dp"
						android:paddingTop="4dp"
						android:paddingRight="2dp"
						android:paddingBottom="2dp"
						android:gravity="center_horizontal|center_vertical"
						android:orientation="horizontal">

						<ImageView
							android:id="@+id/imageview1"
							android:layout_width="11dp"
							android:layout_height="11dp"
							android:layout_marginStart="10dp"
							android:layout_marginEnd="5dp"
							android:src="@drawable/chevstrap_logo"
							android:scaleType="center"
							android:layout_gravity="center_horizontal|center_vertical" />

						<TextView
							android:id="@+id/textview1"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:paddingTop="3dp"
							android:paddingBottom="3dp"
							android:text="@string/menu_title"
							android:textSize="11sp"
							android:textColor="?attr/colorOnSurface" />

					</LinearLayout>
					<LinearLayout
						android:id="@+id/linear10"
						android:layout_width="wrap_content"
						android:layout_height="0dp"
						android:paddingLeft="8dp"
						android:paddingTop="2dp"
						android:paddingRight="8dp"
						android:paddingBottom="0dp"
						android:orientation="vertical"
						android:layout_weight="1">

						<com.google.android.material.button.MaterialButtonToggleGroup
							android:id="@+id/toggle_group"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="vertical">

							<ScrollView
								android:id="@+id/vscroll1"
								android:layout_width="match_parent"
								android:layout_height="match_parent"
								android:padding="2dp">

								<LinearLayout
									android:id="@+id/linear27"
									android:layout_width="120dp"
									android:layout_height="wrap_content"
									android:layout_marginBottom="18dp"
									android:padding="2dp"
									android:orientation="vertical"/>
							</ScrollView>
						</com.google.android.material.button.MaterialButtonToggleGroup>
					</LinearLayout>
				</LinearLayout>

				<com.google.android.material.card.MaterialCardView
					android:id="@+id/linear25"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginTop="13dp"
					app:cardElevation="0dp"
					style="?attr/materialCardViewFilledStyle">

					<LinearLayout
						android:id="@+id/linear_dark"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginTop="5dp"
						android:orientation="vertical"
						android:layout_weight="1" >
						<LinearLayout
							android:id="@+id/linear26"
							android:layout_width="match_parent"
							android:layout_height="35dp"
							android:layout_marginStart="15dp"
							android:layout_marginEnd="10dp"
							android:layout_marginTop="5dp"
							android:padding="2dp"
							android:orientation="vertical">
							<TextView
								android:id="@+id/textview5"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:paddingTop="5dp"
								android:layout_marginStart="0dp"
								android:text=""
								android:textSize="18sp"
								android:textStyle="bold"
								android:textColor="?attr/colorOnSurface" />
						</LinearLayout>
						<LinearLayout
							android:id="@+id/linear20"
							android:layout_marginStart="10dp"
							android:layout_marginEnd="10dp"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:orientation="horizontal"/>
					</LinearLayout>
				</com.google.android.material.card.MaterialCardView>
			</LinearLayout>

			<com.google.android.material.divider.MaterialDivider
				android:id="@+id/linear024"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

			<LinearLayout
				android:id="@+id/linear24"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:gravity="end"
				android:orientation="horizontal">

				<com.google.android.material.button.MaterialButton
					android:id="@+id/button_saveandlaunch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:text="@string/common_save_and_launch" />

				<com.google.android.material.button.MaterialButton
					android:id="@+id/button_save"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:text="@string/common_save" />

				<com.google.android.material.button.MaterialButton
					android:id="@+id/button_close"
					style="@style/Widget.Material3.Button.TextButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:text="@string/common_close" />

			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>

